# finqa_agentic_workflow

./: .gitignore  README.md  presentation.pptx  pyproject.toml
data copy/: df_docs.csv
notebooks/: agentic_experiment.ipynb  data_parsing_experiment.ipynb
src/: README.md  agentic_system.py  main.py  parsing_helpers.py  prompt_helpers.py  tool_helpers.py
