[project]
name = "hiring-confinqa"
version = "0.1.0"
description = "ConfinQA assignment data processing and assessment"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "click==8.1.7",
  "dotenv>=0.9.9",
  "pandas>=2.2.3",
  "pydantic>=2.11.4",
  "ruff>=0.11.10",
  "mypy>=1.15.0",
  "pylit>=0.8.0",
  "requests>=2.32.2",
  "langchain>=0.2.11",
  "langchain-community>=0.2.10",
  "langchain-groq>=0.2.0",
  "ipykernel>=6.30.1",
  "groq>=0.31.0",
  "langchain-experimental>=0.0.64",
  "langgraph==0.6.10",
  "joblib>=1.5.2",
  "docling>=2.2.0",
  "typer>=0.19.2",
  "langchain-core==0.3.79",
  "ipywidgets>=8.1.7",
  "numpy>=2.0.2",
  "sentence-transformers>=5.1.1",
  "gradio>=4.44.1"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
main = "src.main:app"


[tool.ruff]
fix = true
unsafe-fixes = false

[tool.ruff.lint]
select = [
    "F",  # default Ruff rules
    "E",  # pycodestyle Errors
    "W",  # pycodestyle Warnings
    "I",  # import sorting
    "UP", # modern syntax updates
    "B",  # flake8 common pitfalls & best practices
    "Q",  # flake8 consistent quotes
    "N",  # naming conventions,
]

ignore = [
    "B008",
    "D413",
    "E501",
    "W293",
    "W291",
    "PLR2004",
    "D101",
    "D400",

]

fixable = ["ALL"]

extend-select = [
    "PLR2004",
    "D101",
    "D102",
    "D103",
    "D201",
    "D202",
    "D215",
    "T201",
]

[tool.mypy]
disallow_any_generics = true
disallow_untyped_defs = true
disallow_untyped_globals = true
ignore_missing_imports = true
show_error_codes = true
strict = false
warn_return_any = true
plugins = ['pydantic.mypy']
packages = ["src"]
